@@ -17,6 +17,9 @@ NM = @NM@
 OBJEXT = @OBJEXT@
 EXEEXT = @EXEEXT@
 
+CC_FOR_BUILD = @CC_FOR_BUILD@
+EXEEXT_FOR_BUILD = @EXEEXT_FOR_BUILD@
+
 DEP_FLAGS = @DEP_FLAGS@
 DEP_PROCESS = @DEP_PROCESS@
 
